--- a/app/globals.css
+++ b/app/globals.css
@@ -207,8 +207,8 @@ body {
   .bitcount-heading {
     margin: 0;
 
-    font-family: "Bitcount";
-    font-weight: 600;
+    font-family: "Bitcount", "Inter", sans-serif;
+    font-weight: 800;
 
     /* Ensure size is fluid */
     /* font-size handled by utility classes */
